--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,17 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "black (>=25.12.0,<26.0.0)",
+    "ruff (>=0.14.9,<0.15.0)"
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[dependency-groups]
+dev = [
+    "mypy (>=1.19.0,<2.0.0)",
+    "pre-commit (>=4.5.0,<5.0.0)"
+]
