--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ requires-python = ">=3.13"
 dependencies = [
     "black (>=25.12.0,<26.0.0)",
     "ruff (>=0.14.9,<0.15.0)",
-    "pytest (>=9.0.2,<10.0.0)"
+    "pytest (>=9.0.2,<10.0.0)",
+    "bcrypt (>=5.0.0,<6.0.0)"
 ]
 
 [build-system]
