--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,8 @@ dev = [
     "mypy (>=1.19.0,<2.0.0)",
     "pre-commit (>=4.5.0,<5.0.0)",
     "coverage (>=7.13.0,<8.0.0)",
-    "pytest-cov (>=7.0.0,<8.0.0)"
+    "pytest-cov (>=7.0.0,<8.0.0)",
+    "pytest-mock (>=3.15.1,<4.0.0)"
 ]
 
 [tool.poetry.scripts]
