feat: install module 3 dependencies to poetry.lock

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ Thumbs.db
 .env.local
 
 documents/
+
+module_3/concurrent_file_processor/data/processed/      
+module_3/concurrent_file_processor/data/test_dataset/ 
