feat(module_4): implement 3NF schema, ER diagram, and database connectivity for social media backend

--- a/module_4/social_media_backend/pyproject.toml
+++ b/module_4/social_media_backend/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "JoeBright1619"}
 ]
 readme = "README.md"
-requires-python = "^3.11"
+requires-python = ">=3.11"
 dependencies = [
     "psycopg2-binary (>=2.9.11,<3.0.0)",
     "pymongo (>=4.16.0,<5.0.0)",
