--- a/module_4/logistics_backend/pyproject.toml
+++ b/module_4/logistics_backend/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "JoeBright1619"}
 ]
 readme = "README.md"
-requires-python = "^3.11"
+requires-python = ">=3.11"
 dependencies = [
     "psycopg2-binary (>=2.9.11,<3.0.0)",
     "redis (>=7.1.0,<8.0.0)",
