--- a/module_5/url_shortener/docker-compose.yml
+++ b/module_5/url_shortener/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: gunicorn config.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - .:/app
     ports:
@@ -17,8 +17,6 @@ services:
 
   redis:
     image: "redis:alpine"
-    ports:
-      - "6379:6379"
     volumes:
       - redis_data:/data
 
