Refactor: modularize URL shortener and configure WhiteNoise for static files
- Restructured project into modular apps: core, shortener, and api.
- Migrated serializers, views, and tests to the api app.
- Configured WhiteNoise for static file serving in production.
- Updated Dockerfile to handle collectstatic for containerized environments.

--- a/module_5/url_shortener/Dockerfile
+++ b/module_5/url_shortener/Dockerfile
@@ -41,6 +41,6 @@ COPY --from=builder /usr/local /usr/local
 COPY . .
 
 # Collect static files (if needed, though this is an API)
-# RUN python manage.py collectstatic --noinput
+RUN python manage.py collectstatic --noinput
 
 CMD ["gunicorn", "config.wsgi:application", "--bind", "0.0.0.0:8000"]
