--- a/module_5/url_shortener/pyproject.toml
+++ b/module_5/url_shortener/pyproject.toml
@@ -15,6 +15,7 @@ drf-spectacular = "^0.29.0"
 gunicorn = "^24.1.1"
 psycopg2-binary = "^2.9.11"
 django-redis = "^6.0.0"
+whitenoise = "^6.11.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.0"
