feat(module-8): Implement Advanced Optimization & Production Readiness
Summary:
Introduced Redis caching, Celery asynchronous tasks, and structured logging to enhance system performance, scalability, and observability.

Details:
- Infrastructure:
  - Added edis, celery (worker), and celery-beat (scheduler) services to [docker-compose.yml](cci:7://file:///d:/projects/amaliTech/amalitech_labs/module_5/url_shortener/docker-compose.yml:0:0-0:0).
  - Configured Celery broker, result backend, and beat schedule in [settings.py](cci:7://file:///d:/projects/amaliTech/amalitech_labs/module_5/url_shortener/config/settings.py:0:0-0:0).
  - Initialized Celery application in [config/celery.py](cci:7://file:///d:/projects/amaliTech/amalitech_labs/module_5/url_shortener/config/celery.py:0:0-0:0) and [config/__init__.py](cci:7://file:///d:/projects/amaliTech/amalitech_labs/module_5/url_shortener/config/__init__.py:0:0-0:0).

- Caching (Redis):
  - Refactored [RedirectView](cci:2://file:///d:/projects/amaliTech/amalitech_labs/module_5/url_shortener/api/views.py:119:0-193:9) to prioritize Redis cache lookups for short codes.
  - Implemented 'cache-aside' pattern: Cache misses query DB and populate Redis with a 15-minute TTL.
  - Added [shortener/signals.py](cci:7://file:///d:/projects/amaliTech/amalitech_labs/module_5/url_shortener/shortener/signals.py:0:0-0:0) to automatically invalidate cache keys when URLs are updated or deleted.

- Async Tasks (Celery):
  - Implemented [track_click_task](cci:1://file:///d:/projects/amaliTech/amalitech_labs/module_5/url_shortener/shortener/tasks.py:5:0-12:44) to process analytics writes in the background (Write-Behind pattern), reducing redirect latency.
  - Added [archive_expired_urls_task](cci:1://file:///d:/projects/amaliTech/amalitech_labs/module_5/url_shortener/shortener/tasks.py:14:0-25:54) as a periodic task to clean up expired URLs nightly.
  - Refactored [UrlShortenerService](cci:2://file:///d:/projects/amaliTech/amalitech_labs/module_5/u

--- a/module_5/url_shortener/docker-compose.yml
+++ b/module_5/url_shortener/docker-compose.yml
@@ -25,7 +25,8 @@ services:
     image: "redis:alpine"
     volumes:
       - redis_data:/data
-
+    ports:
+      - "6379:6379"
   db:
     image: postgres:15-alpine
     volumes:
@@ -36,6 +37,42 @@ services:
       - POSTGRES_PASSWORD=shortener_password
     ports:
       - "5435:5432"
+
+  celery:
+    build: .
+    command: celery -A config worker -l info
+    volumes:
+      - .:/app
+    environment:
+      - DEBUG=True
+      - SECRET_KEY=dev_secret_key
+      - REDIS_URL=redis://redis:6379/0
+      - DB_HOST=db
+      - DB_NAME=shortener_db
+      - DB_USER=shortener_user
+      - DB_PASSWORD=shortener_password
+      - DB_PORT=5432
+    depends_on:
+      - redis
+      - db
+
+  celery-beat:
+    build: .
+    command: celery -A config beat -l info
+    volumes:
+      - .:/app
+    environment:
+      - DEBUG=True
+      - SECRET_KEY=dev_secret_key
+      - REDIS_URL=redis://redis:6379/0
+      - DB_HOST=db
+      - DB_NAME=shortener_db
+      - DB_USER=shortener_user
+      - DB_PASSWORD=shortener_password
+      - DB_PORT=5432
+    depends_on:
+      - redis
+      - db
 
 volumes:
   redis_data:
